Adding jwt logic and auth handler and proper authenticaition logic for getting token
